Adicionado Meta Dados, agora aparece informações ao compartilhar o link!

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/index.css" rel="stylesheet">
-    <link rel="icon" href="/icon.png" type="image/png">
     <title>Knaip Bills</title>
+    <link rel="icon" href="/icon.png" type="image/png">
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Knaip Bills" />
+    <meta property="og:description" content="Gerencie suas finanças com o KnaipBills!" />
+    <meta property="og:image" content="https://bills.knaip.cloud/capa.png" />
+    <meta property="og:url" content="https://bills.knaip.cloud" />
   </head>
   <body>
     <div id="root"></div>
