Reestilizado pagina de Home e Login!

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Knaip Bills" />
     <meta property="og:description" content="Gerencie suas finanças com o KnaipBills!" />
-    <meta property="og:image" content="https://bills.knaip.cloud/capa.png" />
+    <meta property="og:image" content="https://bills.knaip.cloud/capa200.png" />
     <meta property="og:url" content="https://bills.knaip.cloud" />
   </head>
   <body>
